[tool.poetry]
name = "tasweeper"
version = "0.1.0"
description = ""
authors = ["Jon Gaul <jgaul3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
PyAutoGUI = "^0.9.53"
mss = "^6.1.0"
black = "^22.8.0"
scipy = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
